# data-for-saas-patterns

./: .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml  publish-strands-s3-vectors-memory.yml
multi-tenant-vector-database/amazon-aurora/aws-managed/: 1_build_vector_db_on_aurora.sql  2_bedrock_knowledgebase_managed_rag.ipynb
multi-tenant-vector-database/amazon-aurora/cdk/: README.md  package-lock.json  package.json
multi-tenant-vector-database/amazon-aurora/metadata_tags/: Home_Survey_Tenant1.pdf.metadata.json  Home_Survey_Tenant5.pdf.metadata.json
rds-data-api-rls/: rds-data-api-rls-function.ipynb  rds-data-api-rls-function.py  rds-data-api-rls-transaction.ipynb  rds-data-api-rls-transaction.py
reference-architectures/: dynamodb-pooled-isolation.md  relational-database-pooled-isolation.md  relational-database-sharding.md
samples/aurora-serverless-global-db-cdk/: README.md  cdk.context.json  package.json
samples/multi-tenant-strands-s3-vectors-memory/: .gitignore  README.md  pyproject.toml
samples/multi-tenant-strands-s3-vectors-memory/docs/: strands-s3-vector-memory-plugin.md
samples/multi-tenant-strands-s3-vectors-memory/examples/: multi_agent_orchestrator.py  multi_tenant_agent.py  single_tenant_agent.py
samples/multi-tenant-strands-s3-vectors-memory/scripts/: setup_agentcore.sh  setup_cognito.sh  setup_tvm_role.sh  test_examples.sh
samples/multi-tenant-strands-s3-vectors-memory/src/strands_s3_vectors_memory/: __init__.py  s3_vector_memory.py  s3_vector_memory_plugin.py  token_vending_machine.py
samples/multi-tenant-strands-s3-vectors-memory/tests/integration/: _constants.py  conftest.py  test_integration_multi_tenant.py  test_integration_single_tenant.py
samples/multi-tenant-strands-s3-vectors-memory/tests/unit/: conftest.py  test_multi_tenant_agent.py  test_plugin.py  test_s3_vector_memory.py  test_single_tenant_agent.py  test_token_vending_machine.py
samples/scheduled-aurora-serverless-scaling/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
samples/scheduled-aurora-serverless-scaling/lambda/: app.ts  (+1 more)
samples/tenant-isolation-patterns/: .gitattributes  .projenrc.js  README.md  package.json  test_interface.sh
(+46 files in other folders)
