[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-s3-vectors-memory"
version = "0.2.0"
description = "Long-term semantic memory plugin for Strands Agents backed by Amazon S3 Vectors"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["strands", "agents", "memory", "s3", "vectors", "aws", "bedrock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "boto3>=1.34.0",
    "cachetools>=5.3.0",
    "strands-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
]
agentcore = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/aws-samples/data-for-saas-patterns/tree/main/samples/multi-tenant-strands-s3-vectors-memory"
Documentation = "https://github.com/aws-samples/data-for-saas-patterns/tree/main/samples/multi-tenant-strands-s3-vectors-memory#readme"
Repository = "https://github.com/aws-samples/data-for-saas-patterns"
Issues = "https://github.com/aws-samples/data-for-saas-patterns/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/strands_s3_vectors_memory"]

[tool.hatch.build.targets.sdist]
include = [
    "src/strands_s3_vectors_memory/",
    "examples/",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
# Makes src/ and examples/ importable without sys.path hacks or editable install.
# Works from any working directory — pytest resolves these relative to rootdir
# (the directory containing pyproject.toml).
pythonpath = ["src", "examples", "."]

[tool.pytest.ini_options.markers]
integration = "marks tests as integration (require live AWS resources)"
